# GoInterpreter

./: .gitignore  CMakeLists.txt  GoInterpreter  README.md  read.md
docs/: requirements.md
include/: main.hpp
include/ast/: ast.hpp  base.hpp  declarations.hpp  expressions.hpp  literals.hpp  statements.hpp  types.hpp  visitor.hpp
include/interpreter/: interpreter.hpp  operations.hpp  values.hpp
include/lexing/: lexer.hpp
include/logger/: logger.hpp
include/parsing/: parser.hpp
include/utils/: instanceof.hpp  linked_list.hpp  stack.hpp
include/validation/: symbol_table.hpp  types.hpp  validator.hpp
src/: main.cpp
src/ast/: base.cpp  declarations.cpp  expressions.cpp  literals.cpp  statements.cpp  types.cpp
src/interpreter/: interpreter.cpp  values.cpp
src/lexing/: lexer.cpp  lexer.l
src/logger/: logger.cpp
src/parsing/: parser.cpp  parser.output  parser.y
src/validation/: types.cpp  validator.cpp
test/: array-eq.go  bintree.go  curry.go  echo.go  fac.go  fib.go  ftoc.go  game_of_life.go  map.go  swap.go  test.go  treesort.go
